terraform/cert-manager/mytestapp-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mytestapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - secretName: tls-wildcard
    hosts:
    - mytestapp.smart-techthings.com
  rules:
  - host: "mytestapp.smart-techthings.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mytest-app
            port:
              number: 8081


# deploy a test application
# kubectl create deployment hello-app --image=gcr.io/google-samples/hello-app:1.0
# kubectl expose deployment hello-app --port=8080 --target-port=8080

# kubectl create deployment mytest-app --image=nginx
# kubectl expose deployment mytest-app --port=8081 --target-port=80
